Margin to prevent overlap

--- a/src/components/categorySelect/styles.module.css
+++ b/src/components/categorySelect/styles.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 50%;
+    margin-bottom: 5rem;
 }
 
 .category {
